the_project/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
spec:
  type: ClusterIP
  selector:
    app: todoapp
  ports:
    - port: 6767
      protocol: TCP
      targetPort: 3001
